--- a/Football_Scores-master/app/src/main/res/layout/fragment_main.xml
+++ b/Football_Scores-master/app/src/main/res/layout/fragment_main.xml
@@ -11,6 +11,7 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id = "@+id/scores_list"
+            android:contentDescription="@string/score_list"
             android:divider="@android:color/transparent"
             android:dividerHeight="15sp"
             />
