--- a/Football_Scores-master/app/src/main/res/layout/pager_fragment.xml
+++ b/Football_Scores-master/app/src/main/res/layout/pager_fragment.xml
@@ -13,7 +13,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="top"
             android:paddingBottom="4dp"
-            android:paddingTop="4dp" />
+            android:paddingTop="4dp"
+            android:background="@color/blue10"/>
         ></android.support.v4.view.ViewPager>
 
 </LinearLayout>
