--- a/Football_Scores-master/app/src/main/res/values/styles.xml
+++ b/Football_Scores-master/app/src/main/res/values/styles.xml
@@ -1,8 +1,10 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
+        <item name="colorPrimaryDark">@color/blue06</item>
+        <item name="colorPrimary">@color/blue10</item>
+        <item name="colorAccent">@color/orange04</item>
     </style>
 
 </resources>
